--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-plugin-typescript": "^2.4.21",
     "gatsby-source-filesystem": "^2.3.7",
     "gatsby-source-wordpress-experimental": "^1.4.6",
     "gatsby-transformer-sharp": "2.5.11",
@@ -37,9 +38,20 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-paginate": "^6.3.2",
+    "typescript": "^4.0.3",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "^2.0.5"
   }
 }
