--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "add": "^2.0.6",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
+    "final-form": "^4.20.1",
     "gatsby": "^2.24.37",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-chakra-ui": "^0.1.4",
@@ -36,6 +39,7 @@
     "gatsby-wordpress-experimental-inline-images": "^0.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.1",
     "react-helmet": "^6.1.0",
     "react-paginate": "^6.3.2",
     "typescript": "^4.0.3",
