--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "final-form": "^4.20.1",
+    "final-form-calculate": "^1.3.2",
     "gatsby": "^2.24.37",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-chakra-ui": "^0.1.4",
