--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby": "^2.24.37",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-chakra-ui": "^0.1.4",
+    "gatsby-plugin-google-analytics": "^2.3.16",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-svg": "^3.0.0",
