--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/system": "^1.0.0-next.3",
+    "@chakra-ui/utils": "^1.0.0-next.3",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@stripe/react-stripe-js": "^1.1.2",
