--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "final-form": "^4.20.1",
     "final-form-calculate": "^1.3.2",
     "gatsby": "^2.24.37",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-google-analytics": "^2.3.16",
