--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "start": "npm run develop",
     "serve": "gatsby serve"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/system": "^1.0.0-next.3",
@@ -43,6 +48,7 @@
     "gatsby-source-wordpress-experimental": "^1.4.6",
     "gatsby-transformer-sharp": "2.5.11",
     "gatsby-wordpress-experimental-inline-images": "^0.0.3",
+    "lint-staged": "^10.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
@@ -63,6 +69,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "^4.3.0",
     "prettier": "^2.0.5"
   }
 }
