--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-final-form": "^6.5.1",
     "react-helmet": "^6.1.0",
     "react-paginate": "^6.3.2",
+    "striptags": "^3.1.1",
     "typescript": "^4.0.3",
     "yarn": "^1.22.4"
   },
@@ -71,6 +72,7 @@
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.3.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "ts-node": "^9.0.0"
   }
 }
