--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-plugin-google-analytics": "^2.3.16",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-netlify-cache": "^1.2.0",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.19",
     "gatsby-plugin-typescript": "^2.4.21",
