--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gatsby-wordpress-experimental-inline-images": "^0.0.3",
     "lint-staged": "^10.4.0",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
