chore(deps): bump node and dev dependency versions

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "name": "Tobias",
     "email": "tobias@lewiswbutlerfoundation.org"
   },
+  "engines": {
+    "node": "16.11.0",
+    "npm": "~8.0.0"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "clean": "gatsby clean",
@@ -64,17 +68,17 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "husky": "^4.3.0",
-    "prettier": "^2.0.5",
-    "ts-node": "^9.0.0"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.2",
+    "prettier": "^2.4.1",
+    "ts-node": "^10.3.0"
   }
 }
