--- a/package.json
+++ b/package.json
@@ -38,21 +38,22 @@
     "emotion-theming": "^10.0.27",
     "final-form": "^4.20.1",
     "final-form-calculate": "^1.3.2",
-    "gatsby": "^2.24.37",
-    "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.13",
-    "gatsby-plugin-chakra-ui": "^0.1.4",
-    "gatsby-plugin-google-analytics": "^2.3.16",
+    "gatsby": "^3.14.2",
+    "gatsby-background-image": "^1.5.3",
+    "gatsby-link": "^3.14.0",
+    "gatsby-plugin-chakra-ui": "^0.1.5",
+    "gatsby-plugin-google-analytics": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.19",
-    "gatsby-plugin-typescript": "^2.4.21",
-    "gatsby-source-filesystem": "^2.3.7",
-    "gatsby-source-wordpress-experimental": "^2.1.1",
-    "gatsby-transformer-sharp": "2.5.11",
-    "gatsby-wordpress-experimental-inline-images": "^0.0.3",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-plugin-typescript": "^3.14.0",
+    "gatsby-react-router-scroll": "^4.14.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-source-wordpress": "^5.14.1",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "gbimage-bridge": "^0.1.4",
     "lint-staged": "^10.4.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
