--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
     }
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/system": "^1.0.0-next.3",
-    "@chakra-ui/utils": "^1.0.0-next.3",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/react": "^1.6.9",
+    "@chakra-ui/system": "^1.7.3",
+    "@chakra-ui/utils": "^1.8.2",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "add": "^2.0.6",
     "dotenv": "^8.2.0",
-    "emotion-theming": "^10.0.27",
     "final-form": "^4.20.1",
     "final-form-calculate": "^1.3.2",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.14.2",
     "gatsby-background-image": "^1.5.3",
     "gatsby-link": "^3.14.0",
-    "gatsby-plugin-chakra-ui": "^0.1.5",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
