--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/icons": "^1.0.16",
     "@chakra-ui/react": "^1.6.9",
     "@chakra-ui/system": "^1.7.3",
     "@chakra-ui/utils": "^1.8.2",
