--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby": "^3.14.2",
     "gatsby-background-image": "^1.5.3",
     "gatsby-link": "^3.14.0",
+    "gatsby-plugin-gatsby-cloud": "^3.2.1",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
