--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.14.1",
